k8s-manifests/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    app: aware
  name: aware-deployment
  namespace: monitoring
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: aware
    spec:
      containers:
        - name: aware
          image: sdpequinor/aware
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              name: http
