k8s-manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aware
  namespace: monitoring
  labels:
    app: aware
  annotations:
    external-dns.alpha.kubernetes.io/hostname:  aware.dev.sdpaks.equinor.com.
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - aware.dev.sdpaks.equinor.com
    secretName: aware-tls
  rules:
    - host: aware.dev.sdpaks.equinor.com
      http:
        paths:
          - path: /
            backend:
              serviceName: aware-service
              servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aware-auth
  namespace: monitoring
  labels:
    app: aware
spec:
  tls:
  - hosts:
    - aware.dev.sdpaks.equinor.com
    secretName: aware-tls
  rules:
    - host: aware.dev.sdpaks.equinor.com
      http:
        paths:
          - path: /oauth2 
            backend:
              serviceName: oauth2-proxy-sdp
              servicePort: 4180
